nesc-frontend/src/test/resources/integration/programs/good/good14/C.nc
/* Valid interface reference parameters. */

configuration C
{
   provides interface I<char*, long double, long int>;
}
implementation
{
   components M;
   I = M.I;
}
